# sdk

./: CMakeLists.txt  GPATH  GTAGS  README.md
doc/: Doxyfile  大屏交互版简单sdk 说明.docx  激光雷达大屏交互坐标系统.docx
doc/html/: _8h_source.html  _active_socket_8h_source.html  _c_yd_lidar_8h_source.html  _channel_device_8h_source.html  _console_8h_source.html  _convert_u_t_f_8h_source.html  _host_8h_source.html  _input___lite_8h_source.html  _input_manager_8h_source.html  _k_means_8h_source.html  _km_tree_8h_source.html  _km_utils_8h_source.html  _matrix_8hpp.html  _matrix_8hpp__dep__incl.map  _matrix_8hpp__dep__incl.md5  _matrix_8hpp__incl.map  _matrix_8hpp__incl.md5  _matrix_8hpp_source.html  _passive_socket_8h_source.html  _simple_ini_8h_source.html  _simple_socket_8h_source.html  _square_matrix_8hpp.html  _square_matrix_8hpp__dep__incl.map  _square_matrix_8hpp__dep__incl.md5  _square_matrix_8hpp__incl.map  _square_matrix_8hpp__incl.md5  _square_matrix_8hpp_source.html  _stat_timer_8h_source.html  _vector2_8hpp.html  _vector2_8hpp__dep__incl.map  _vector2_8hpp__dep__incl.md5  _vector2_8hpp__incl.map  _vector2_8hpp__incl.md5  _vector2_8hpp_source.html  _vector3_8hpp.html  _vector3_8hpp__dep__incl.map  _vector3_8hpp__dep__incl.md5  _vector3_8hpp__incl.map  _vector3_8hpp__incl.md5  _vector3_8hpp_source.html  (+389 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_1.js  enumvalues_0.js  enumvalues_2.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  (+32 more)
doc/latex/: annotated.tex  class_c_yd_lidar.tex  class_km_tree.tex  class_s_l_1_1_input___lite_1_1_i_input_configuration.tex  class_s_l_1_1_input___lite_1_1_i_input_configuration__inherit__graph.md5  class_s_l_1_1_input___lite_1_1_i_input_manager.tex  class_s_l_1_1_input___lite_1_1_i_input_manager__inherit__graph.md5  class_s_l_1_1_input___lite_1_1_input_configuration.tex  class_s_l_1_1_input___lite_1_1_input_configuration__inherit__graph.md5  class_s_l_1_1_input___lite_1_1_input_manager.tex  class_s_l_1_1_input___lite_1_1_input_manager__coll__graph.md5  classserial_1_1_serial.tex  classydlidar_1_1_y_dlidar_driver.tex  classydlidar_1_1_y_dlidar_driver__coll__graph.md5  classydlidar_1_1math_1_1_c_array_double.tex  classydlidar_1_1math_1_1_c_array_double__coll__graph.md5  classydlidar_1_1math_1_1_c_array_double__inherit__graph.md5  classydlidar_1_1math_1_1_c_array_float.tex  classydlidar_1_1math_1_1_c_array_float__coll__graph.md5  classydlidar_1_1math_1_1_c_array_int.tex  classydlidar_1_1math_1_1_c_array_int__coll__graph.md5  classydlidar_1_1math_1_1_c_array_int__inherit__graph.md5  classydlidar_1_1math_1_1_c_array_numeric.tex  classydlidar_1_1math_1_1_c_array_numeric__coll__graph.md5  classydlidar_1_1math_1_1_c_array_u_int.tex  classydlidar_1_1math_1_1_c_array_u_int__inherit__graph.md5  classydlidar_1_1math_1_1_km_tree.tex  classydlidar_1_1math_1_1aligned__allocator.tex  dir_17ef7a4e8e4c36a04f1d588d3dfe3a5b.tex  dir_54ab730b694d71ee1ade87b2882d569d.tex  dir_6552cc4562f1e6cb4c3a56717cea2385.tex  dir_6f35626274a2894a2f54fb6b38818454.tex  dir_6f9635d4fbfa321d4c00f29df5cd540c.tex  dir_9ab24f7a9b919a074bf0c1a165a03cb6.tex  dir_9da120bfa6aa867239f8de7db75861b3.tex  dir_b91b5570ab2bba160d157abf1f8bcb9c.tex  dir_c141f8810113dc043d4961e5e55e75c8.tex  dir_e1aa7123b69cb161cbc5909925b62640.tex  hierarchy.tex  md_README.tex  (+19 more)
include/: .h  CYdLidar.h  ChannelDevice.h  Console.h  ConvertUTF.h  Host.h  PassiveSocket.h  SimpleIni.h  SimpleSocket.h  StatTimer.h  kmeans.h  line_feature.h  lock.h  locker.h  serial.h  thread.h  timer.h  utilities.h  v8stdint.h  ydlidar_cmd.h  ydlidar_driver.h  ydlidar_protocol.h
input_lite/: CMakeLists.txt
input_lite/Test/: main.cpp
input_lite/include/: InputManager.h  Input_Lite.h
input_lite/src/: InputManager.cpp  Input_Lite.cpp
input_lite/src/ios/: Input.cpp
input_lite/src/linux/: Input.cpp
input_lite/src/windows/: Input.cpp
matrix/: CMakeLists.txt
samples/: CMakeLists.txt  main.cpp
samples/scripts/: pmouse.py
serial/: common.h  lock.c  lock.h  serial.cpp  serial.h
serial/impl/unix/: unix_serial.cpp  unix_serial.h
serial/impl/windows/: win.h  win_serial.h
sockets/: ActiveSocket.cpp  ActiveSocket.h  CMakeLists.txt  Host.h  PassiveSocket.cpp  SimpleSocket.cpp  SimpleSocket.h
src/: CYdLidar.cpp  Console.cpp  ConvertUTF.c  SimpleSocket.cpp  common.h  kmeans.cpp  line_feature.cpp  lock.c  serial.cpp  unix_timer.cpp  ydlidar_driver.cpp
src/impl/unix/: list_ports_linux.cpp  unix_serial.cpp  unix_serial.h  unix_timer.cpp
src/impl/windows/: list_ports_win.cpp  win_serial.cpp  win_serial.h  win_timer.cpp
src/kmeans++/: KMeans.cpp  KmUtils.h
